# treesitter

./: .gitignore  Makefile  README.md  wippy.yaml
component/: Cargo.toml  Dockerfile  build.sh
component/src/: lib.rs
component/wit/: world.wit
scripts/: stage_hashes.py
src/app/: _index.yaml  assert.lua  bench.lua  bench_worker.lua  errors.lua  lang_csharp.lua  lang_go.lua  lang_html.lua  lang_javascript.lua  lang_lua.lua  lang_php.lua  lang_python.lua  lang_typescript.lua  resources.lua  smoke_test.lua
src/treesitter/: _index.yaml  treesitter.lua
src/treesitter/assets/: treesitter.wasm
