[package]
name = "treesitter"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Resident tree-sitter parsing engine for the Wippy runtime (WASM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wit-bindgen = "0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-language = "0.1"
tree-sitter-go = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-php = "0.24"
tree-sitter-c-sharp = "0.23"
tree-sitter-html = "0.23"
tree-sitter-lua = { git = "https://github.com/tree-sitter-grammars/tree-sitter-lua", tag = "v0.5.0" }

[profile.release]
opt-level = "s"
lto = true
strip = true
